--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             <div class="pic">
                 <div class="numb">12</div>
             </div>
+             <div class="pic">
+                <div class="numb">13</div>
+            </div>
+            <div class="pic">
+                <div class="numb">14</div>
+            </div>
 
         </div>
         <button class="button right">PREV</button>
